--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,15 @@
 [tool.poetry]
-name = "ascender"
+name = "SageMaker SDK Sandbox"
 version = "0.1.0"
-description = "Project template for XCCV group of cvpaper.challenge."
+description = "Sandbox for Amazon SageMaker SDK."
 license = "MIT"
-authors = ["cvpaper.challenge XCCV group"]
+authors = ["yoshihiro fukuhara (a.k.a. gatheluck)"]
 maintainers = ["yoshihiro fukuhara <gatheluck@gmail.com>"]
 readme = "README.md"
 keywords = [
-    "ascender",
+    "SageMaker",
+    "AWS",
     "Python",
-    "projects",
-    "project templates",
-    "project directory",
-]
-classifiers = [
-    "Development Status :: 4 - Beta",
-    "Environment :: Console",
-    "Environment :: GPU :: NVIDIA CUDA",
-    "License :: OSI Approved :: MIT License",
-    "Natural Language :: English",
-    "Natural Language :: Japanese",
-    "Programming Language :: Python",
-    "Topic :: Software Development",
 ]
 
 [tool.poetry.dependencies]
@@ -54,7 +42,7 @@ disallow_any_decorated = false
 disallow_any_generics = false
 disallow_any_unimported = false
 disallow_incomplete_defs = true
-disallow_subclassing_any = true
+disallow_subclassing_any = false
 disallow_untyped_calls = true
 disallow_untyped_decorators = false
 disallow_untyped_defs = true
